--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<td align="center">
 			<img border="0" src="gifs/HW4.gif" width="70%"></td>
 			<td align="center">
-			<img border="0" src="" width="70%"></td>
+			<img border="0" src="gifs/HW5.gif" width="100%"></td>
 		</tr>
 		<tr>
 			<td width="33%">
@@ -56,7 +56,7 @@
 			<td width="33%">
 			<p align="center">
 			<a href="HW5.html">
-			</a></td>
+			HW5.html</a><br/></td>
 		</tr>
 	</table>
 </body>
