--- a/index.html
+++ b/index.html
@@ -59,4 +59,26 @@
 			HW5.html</a><br/></td>
 		</tr>
 	</table>
+	<table border="1" width="100%">
+		<tr>
+			<td align="center">
+			<img border="0" src="gifs/HW6.gif" width="70%"></td>
+			<td align="center">
+			<img border="0" src="gifs/HW7.gif" width="70%"></td>
+			<td align="center">
+			<img border="0" src="gifs/HW8.gif" width="70%"></td>
+		</tr>
+		<tr>
+			<td width="33%">
+			<p align="center">
+			<a href="HW6.html">
+			HW6.html</a></td>
+			<td width="33%">
+			<p align="center">
+			</td>
+			<td width="33%">
+			<p align="center">
+			</td>
+		</tr>
+	</table>
 </body>
