--- a/shader.html
+++ b/shader.html
@@ -31,126 +31,186 @@
     webgl tutorial S-0 <br/><br/>
 	GLSL shaders<br/>
 </div>
-<script src="js/r69/three.min.js"></script>
-<script src="js/OrbitControls.js"></script>
-<script src="js/KeyboardState.js"></script>
 
+<div id="info">Render to Texture
+    <br>(shader to cutout)
+    <br>with shadow</div>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
+<script src="https://dl.dropboxusercontent.com/u/3587259/Code/Threejs/OrbitControls.js">
+    
+</script>
 <script id="myVertexShader" type="x-shader/x-vertex">
-	uniform float phase;
-	varying vec3 newpos;
-	void main() {
-		newpos = position;
-		//newpos.z = 0.2*sin (5.0*(newpos.x + phase));
-		gl_Position = projectionMatrix* modelViewMatrix * vec4( newpos, 1.0 );
-	}
+    varying vec2 vUv;
+    void main() {
+        gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
+        vUv = uv;
+    }
 </script>
 <script id="myFragmentShader" type="x-shader/x-fragment">
-	varying vec3 newpos;
-	void main() {
-		if (newpos.x > 0.0)
-			discard;
-			gl_FragColor = vec4 (1.0, 0.0, 0.0, 1.0);
-	}
+    uniform sampler2D texture;
+    varying vec2 vUv;
+
+    void main() {
+        vec4 color = texture2D(texture, vUv);
+        if (color.b > 0.85) discard;
+        else gl_FragColor = vec4(.2, .2, .2, 0.) + color;
+    }
 </script>
+<script type="x-shader/x-fragment" id="fragmentShaderDepth">
+    uniform sampler2D texture;
+    varying vec2 vUv;
+
+    vec4 pack_depth(const in float depth) {
+        const vec4 bit_shift = vec4(256.0 * 256.0 * 256.0, 256.0 * 256.0, 256.0, 1.0);
+        const vec4 bit_mask = vec4(0.0, 1.0 / 256.0, 1.0 / 256.0, 1.0 / 256.0);
+        vec4 res = fract(depth * bit_shift);
+        res -= res.xxyz * bit_mask;
+        return res;
+    }
+
+    void main() {
+        vec4 pixel = texture2D(texture, vUv);
+        if (pixel.b > 0.85) discard;
+        gl_FragData[0] = pack_depth(gl_FragCoord.z);
+    }
+</script>
+
 <script>
-
-var clock = new THREE.Clock();
-var scene, renderer, camera;
-var teapot;
-var controls;
-
-var teapotMaterial;
+var camera, scene, renderer, light, controls;
+var sceneRTT, rtTexture, teapot;
+var angle = 0;
 
 init();
 animate();
 
-function init()
-{
-	var width = window.innerWidth;
-	var height = window.innerHeight;
+function init() {
+    sceneRTT = new THREE.Scene();
+    light = new THREE.PointLight(0xffffff);
+    light.position.set(0, 300, 200);
+    sceneRTT.add(light);
 
-	renderer = new THREE.WebGLRenderer({antialias: true});
-	renderer.setSize (width, height);
-	document.body.appendChild (renderer.domElement);
-	renderer.setClearColor (0x888888);
-	
-	scene = new THREE.Scene();
+    rtTexture = new THREE.WebGLRenderTarget(
+    window.innerWidth, window.innerHeight, {
+        minFilter: THREE.LinearFilter,
+        magFilter: THREE.NearestFilter,
+        format: THREE.RGBFormat
+    });
 
-	camera = new THREE.PerspectiveCamera (45, width/height, 0.1, 10000);
-	camera.position.y = 160;
-	camera.position.z = 400;
-	camera.lookAt (new THREE.Vector3(0,0,0));
+    var jsonLoader = new THREE.JSONLoader();
+    jsonLoader.load("http://jyunming-chen.github.io/tutsplus/models/teapot.json", function (geometry) {
+        teapot = new THREE.Mesh(geometry, new THREE.MeshLambertMaterial({
+            color: 0xff1234
+        }));
+        teapot.scale.set(32, 32, 32);
+        sceneRTT.add(teapot);
+    });
 
-	// add control here (after the camera is defined)
-	controls = new THREE.OrbitControls (camera, render.domElement);
+    ///////////////////////////////////////////////////////////////////////////
+    scene = new THREE.Scene();
+    renderer = new THREE.WebGLRenderer({
+        antialias: true
+    });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setClearColor(0x888888);
 
-	var gridXZ = new THREE.GridHelper(100, 10);
-	gridXZ.setColors( new THREE.Color(0xff0000), new THREE.Color(0xffffff) );
-	scene.add(gridXZ);
+    camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000);
+    camera.position.y = 80;
+    camera.position.z = 400;
+    camera.lookAt(new THREE.Vector3(0, 0, 0));
 
-	var pointLight = new THREE.PointLight (0xffffff);
-	pointLight.position.set (0,300,200);
-	scene.add (pointLight);
+    controls = new THREE.OrbitControls(camera, renderer.domElement);
+    var ambientLight = new THREE.AmbientLight(0x555555);
+    scene.add(ambientLight);
 
-	teapotMaterial = new THREE.ShaderMaterial({
-		uniforms: {
-			phase: {type: 'f', value: 1.0 }
-		},
-		vertexShader: document.getElementById('myVertexShader').textContent,
-		fragmentShader: document.getElementById('myFragmentShader').textContent,
-		polygonOffset: true,
-		polygonOffsetUnits: -5.0,
-		polygonOffsetFactor: -2.0
-	});
+    document.body.appendChild(renderer.domElement);
 
-	var jsonLoader = new THREE.JSONLoader();
-	jsonLoader.load ("models/teapot.json", function (geometry) {
-		teapot = new THREE.Mesh (geometry, teapotMaterial);
-		teapot.scale.set (12,12,12);
-		scene.add (teapot);
-	});
-	
-	var jsonLoader = new THREE.JSONLoader();
-	jsonLoader.load ("models/teapot.json", function (geometry) {
-		teapot2 = new THREE.Mesh (geometry, new THREE.MeshLambertMaterial ({color: 0x12ff44}));
-		teapot2.scale.set (12,12,12);
-		teapot2.position.set (60,0,30);
-		scene.add (teapot2);
-	});
-	
-	var ambientLight = new THREE.AmbientLight (0x111111);
-	scene.add(ambientLight);
+    //////////////////////////////////////////////////
+    var plane = new THREE.PlaneBufferGeometry(150, 150);
+    rttmaterial = new THREE.ShaderMaterial({
+        side: THREE.DoubleSide,
+        uniforms: {
+            texture: {
+                type: "t",
+                value: rtTexture
+            }
+        },
+        vertexShader: document.getElementById('myVertexShader').textContent,
+        fragmentShader: document.getElementById('myFragmentShader').textContent
+    });
+    quad = new THREE.Mesh(plane, rttmaterial);
+    quad.position.set(0, 20, 0);
+    scene.add(quad);
 
-	window.addEventListener ('resize', onWindowResize, false);	
+    //////////////////////////////////////////////////////////////////////////
+    // shadowing ///////////////
+    renderer.shadowMapEnabled = true;
+    renderer.shadowMapType = THREE.PCFShadowMap;
+
+    quad.castShadow = true;
+    quad.customDepthMaterial = new THREE.ShaderMaterial({
+        side: THREE.DoubleSide,
+        uniforms: {
+            texture: {
+                type: 't',
+                value: rtTexture
+            }
+        },
+        vertexShader: document.getElementById('myVertexShader').textContent,
+        fragmentShader: document.getElementById('fragmentShaderDepth').textContent
+    });
+
+    spotLight = new THREE.SpotLight(0xffffff, 1);
+    spotLight.position.set(0, 300, 300);
+    spotLight.angle = Math.PI / 3;
+    spotLight.castShadow = true;
+    spotLight.shadowMapWidth = 1024;
+    spotLight.shadowMapHeight = 1024;
+    spotLight.shadowCameraNear = 5;
+    spotLight.shadowCameraFar = 4000;
+    spotLight.shadowCameraFov = spotLight.angle / Math.PI * 180;
+    spotLight.exponent = 20;
+    scene.add(spotLight);
+
+    var ground = new THREE.Mesh(
+        new THREE.PlaneGeometry(400, 400, 130, 130),
+        new THREE.MeshLambertMaterial());
+    ground.rotation.x = -Math.PI / 2;
+    scene.add(ground);
+    ground.receiveShadow = true;
 }
 
-function onWindowResize()
-{
-	camera.aspect = window.innerWidth / window.innerHeight;
-	camera.updateProjectionMatrix();
-	renderer.setSize (window.innerWidth, window.innerHeight);
+function animate() {
+    controls.update();
+    angle += 0.02;
+    if (teapot !== undefined) teapot.rotation.y = angle;
+    if (quad !== undefined) {
+        quad.rotation.set(
+				-Math.atan2(
+					camera.position.y-quad.position.y, 
+					Math.sqrt(
+						Math.pow(camera.position.x-quad.position.x, 2)+
+						Math.pow(camera.position.z-quad.position.z, 2)
+					)
+				),
+				Math.atan2(camera.position.x-quad.position.x, camera.position.z-quad.position.z),
+				0,
+				'YXZ'
+			);
+    }
+
+    requestAnimationFrame(animate);
+    render();
 }
 
-function animate()
-{
-	requestAnimationFrame ( animate );  
-	update();
-	render(); 
+function render() {
+    // render teapot to texture
+    renderer.setClearColor(0x0000ff);
+    renderer.render(sceneRTT, camera, rtTexture, true);
+
+    // render texture to screne
+    renderer.setClearColor(0x888888);
+    renderer.render(scene, camera);
 }
-
-function update()
-{
-	controls.update();
-
-	teapot.material.uniforms.phase.value = clock.getElapsedTime();
-}
-
-function render()
-{
-	renderer.render (scene, camera);
-}
-
-
 </script>
 </body>
 
