--- a/WebGL/hw1.html
+++ b/WebGL/hw1.html
@@ -2,21 +2,14 @@
 <!-- saved from url=(0066)http://www.cs.unm.edu/~angel/COURSERA/CODE/EXAMPLES/triangle2.html -->
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=Big5">
-<style>
-	canvas {
-		position: fixed;
-		top: 0;
-		left: 0;
-	}
-</style>
 
 <script id="vertex-shader" type="x-shader/x-vertex">
 attribute vec4 vPosition;
-uniform float angle;
+uniform float degree;
 
 void main()
 {
-	float twist = sqrt(vPosition.x*vPosition.x + vPosition.y*vPosition.y) * angle;
+	float twist = sqrt(vPosition.x*vPosition.x + vPosition.y*vPosition.y) * degree;
 	float xp = vPosition.x * cos(twist) - vPosition.y * sin(twist);
     float yp = vPosition.x * sin(twist) + vPosition.y * cos(twist);
 	
@@ -33,13 +26,17 @@ void main()
 }
 </script>
 
-<script type="text/javascript" src="./triangle2_files/webgl-utils.js"></script>
-<script type="text/javascript" src="./triangle2_files/initShaders.js"></script>
-<script type="text/javascript" src="./triangle2_files/flatten.js"></script>
-<script type="text/javascript" src="./triangle2_files/triangle2.js"></script>
+<script type="text/javascript" src="./hw1_files/webgl-utils.js"></script>
+<script type="text/javascript" src="./hw1_files/initShaders.js"></script>
+<script type="text/javascript" src="./hw1_files/flatten.js"></script>
+<script type="text/javascript" src="./hw1_files/hw1.js"></script>
 </head>
 
 <body>
+	<pre>Level:	<input type="text" id="level" value="5"></pre>
+    <pre>Degree:	<input type="text" id="degree" value="0">	<button type="button" onclick="window.onload()">Twist!</button></pre>
+    
+	
 <canvas id="gl-canvas" width="512" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
