--- a/WebGL/HW1/index.html
+++ b/WebGL/HW1/index.html
@@ -26,10 +26,10 @@ void main()
 }
 </script>
 
-<script type="text/javascript" src="./hw1_files/webgl-utils.js"></script>
-<script type="text/javascript" src="./hw1_files/initShaders.js"></script>
-<script type="text/javascript" src="./hw1_files/flatten.js"></script>
-<script type="text/javascript" src="./hw1_files/hw1.js"></script>
+<script type="text/javascript" src="../Common/webgl-utils.js"></script>
+<script type="text/javascript" src="../Common/initShaders.js"></script>
+<script type="text/javascript" src="../Common/MV.js"></script>
+<script type="text/javascript" src="./hw1.js"></script>
 </head>
 
 <body>
