--- a/chart.html
+++ b/chart.html
@@ -1,3 +1,4 @@
+<meta name = "viewport" content = "width=device-width, initial-scale=1.0, user-scalable=no">
 <html>
   <head>
     <script type='text/javascript' src='https://www.google.com/jsapi'></script>
