--- a/chart.html
+++ b/chart.html
@@ -31,7 +31,7 @@
         var chart = new google.visualization.AnnotationChart(document.getElementById('chart_div'));
 
         var options = {
-          displayAnnotations: true, displayRangeSelector:false
+          displayAnnotations: false, displayRangeSelector:false
         };
 
         chart.draw(data, options);
