--- a/chart.html
+++ b/chart.html
@@ -41,6 +41,6 @@
   </head>
 
   <body>
-    <div id='chart_div' style='width: 480px; height: 350px;'></div>
+    <div id='chart_div' style='width: 100%; height: 100%;'></div>
   </body>
 </html>
