--- a/chart.html
+++ b/chart.html
@@ -32,7 +32,7 @@
         var chart = new google.visualization.AnnotationChart(document.getElementById('chart_div'));
 
         var options = {
-          displayAnnotations: false, displayRangeSelector:false, displayZoomButtons:false, scaleType:'maximized'
+          displayAnnotations: false, displayRangeSelector:true, displayZoomButtons:false, scaleType:'maximized'
         };
 
         chart.draw(data, options);
