--- a/chart.html
+++ b/chart.html
@@ -1,4 +1,4 @@
-<meta name = "viewport" content = "width=device-width, initial-scale=1.0, user-scalable=no">
+<meta name = "viewport" content = "initial-scale=1.0, user-scalable=no">
 <html>
   <head>
     <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1','packages':['annotationchart']}]}"></script>
