--- a/chart.html
+++ b/chart.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <style>html, body{ width: 100%; margin: 0; padding: 0; }</style>
+    
     <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1','packages':['annotationchart']}]}"></script>
     <script type='text/javascript'>
       google.load('visualization', '1', {'packages':['annotationchart']});
