--- a/chart.html
+++ b/chart.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <style>html, body{ width: 100%; height: 100%; }</style>
+    <style> body{ width: 100%; height: 100%; }</style>
     
     <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1','packages':['annotationchart']}]}"></script>
     <script type='text/javascript'>
