--- a/chart.html
+++ b/chart.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <style> body{ width: 100%; height: 100%; }</style>
+    <style> html{ width: 100%; }</style>
     
     <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1','packages':['annotationchart']}]}"></script>
     <script type='text/javascript'>
@@ -42,6 +42,6 @@
   </head>
 
   <body>
-    <div id='chart_div'></div>
+    <div id='chart_div' style = ' width: 100%; height: 100%; '></div>
   </body>
 </html>
