--- a/chart.html
+++ b/chart.html
@@ -1,7 +1,6 @@
 <html>
   <head>
-    <style> html{ width: 100%; }</style>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
     <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1','packages':['annotationchart']}]}"></script>
     <script type='text/javascript'>
       google.load('visualization', '1', {'packages':['annotationchart']});
