--- a/chart.html
+++ b/chart.html
@@ -1,6 +1,26 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
+    <style> 
+    body {
+		background-color: #fff;
+		color: #111;
+		margin: 0px;
+		overflow: hidden;
+		font-family: Monospace;
+		font-size: 20px;
+		position: absolute;
+  	}
+  	#chart_div {
+  		position: absolute;
+  		top: 0px; width: 100%;
+  		
+  		padding: 5px;
+  		text-align: center;
+  		color: #ffff00
+  	}
+    </style>
+    
     <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1','packages':['annotationchart']}]}"></script>
     <script type='text/javascript'>
       google.load('visualization', '1', {'packages':['annotationchart']});
@@ -41,6 +61,6 @@
   </head>
 
   <body>
-    <div id='chart_div' style = ' width: 100%; height: 100%; '></div>
+    <div id='chart_div'></div>
   </body>
 </html>
