--- a/chart.html
+++ b/chart.html
@@ -3,6 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
     <style> 
     body {
+		width: 100%;
+		height: 100%;
 		background-color: #fff;
 		color: #111;
 		margin: 0px;
@@ -13,9 +15,9 @@
   	}
   	#chart_div {
   		position: absolute;
-  		top: 0px; width: 100%;
-  		
-  		padding: 5px;
+  		top: 0px; 
+		width: 100%;
+		height: 100%;
   		text-align: center;
   		color: #ffff00
   	}
@@ -48,13 +50,10 @@
           [new Date(2314, 2, 20), 0, 'Lalibertines', 'All crew lost',
                                   79463, 'Gallantors', 'Omniscience achieved']
         ]);
-
         var chart = new google.visualization.AnnotationChart(document.getElementById('chart_div'));
-
         var options = {
           displayAnnotations: false, displayRangeSelector:true, displayZoomButtons:false, scaleType:'maximized'
         };
-
         chart.draw(data, options);
       }
     </script>
