--- a/chart.html
+++ b/chart.html
@@ -1,25 +1,12 @@
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style> 
     body {
-		width: 100%;
-		height: 100%;
-		background-color: #fff;
-		color: #111;
-		margin: 0px;
-		overflow: hidden;
-		font-family: Monospace;
-		font-size: 20px;
-		position: absolute;
-  	}
-  	#chart_div {
-  		position: absolute;
-  		top: 0px; 
-		width: 100%;
-		height: 100%;
-  		text-align: center;
-  		color: #ffff00
+		display:inline-block; 
+	     margin-bottom:5px;
+	    width: 100%;
+
   	}
     </style>
     
