--- a/chart.html
+++ b/chart.html
@@ -2,10 +2,11 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style> 
-    body {
+    #chart_div {
 		display:inline-block; 
 	     margin-bottom:5px;
 	    width: 100%;
+	    height: 100%;
 
   	}
     </style>
