--- a/chart.html
+++ b/chart.html
@@ -3,12 +3,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style> 
     #chart_div {
-		display:inline-block; 
-	     margin-bottom:5px;
-	    width: 100%;
-	    height: 100%;
-
-  	}
+    	display:inline-block; 
+    	margin-bottom:5px;
+    	width: 100%;
+    	height: 100%;
+    	overflow: hidden;
+    }
     </style>
     
     <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1','packages':['annotationchart']}]}"></script>
